--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html>
+    <link rel="shortcut icon" type="image/png" href="ICCO/images/favicon.ico"/>
     <title>
         Refugees
     </title>
