--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 
 <html>
-    <link rel="shortcut icon" type="image/png" href="ICCO/images/favicon.ico"/>
+    <link rel="shortcut icon" type="image/png" href="ICCO/images/favicon.png"/>
     <title>
-        Refugees
+        ICCO
     </title>
 
     <body>
-        hoi
+        text here
     </body>
 </html>
