--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <link rel="shortcut icon" type="image/png" href="ICCO/images/favicon.png"/>
     <title>
-        ICCO
+        ICCO Infographics
     </title>
 
     <body>
