--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <div class="w3-content w3-padding-large w3-margin-top" id="portfolio">
 
           <!-- Images (Portfolio) -->
-          <img src="ICCO/images/Demografia.jpg" alt="Info1" class="w3-image" width="1000" height="500">
-          <img src="ICCO/images/Alimentacion.jpg" alt="Info2" class="w3-image w3-margin-top" width="1000" height="500">
+          <img src="ICCO/images/Demografia.jpg" alt="Info" class="w3-image" width="1000" height="500">
+          <img src="ICCO/images/Alimentacion.jpg" alt="Info1" class="w3-image w3-margin-top" width="1000" height="500">
 
           <!-- Contact -->
           <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="contact">
